source/objects/Opportunity_Snapshot__c/Opportunity_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Data object used to store historical opportunity information</description>
    <label>Opportunity Snapshot</label>
    <nameField>
        <label>Opportunity Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>