source/objects/Opportunity_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>