source/objects/Opportunity_Snapshot__c/fields/Amount_Prior__c.field-meta.xml
<CustomField>
    <fullName>Amount_Prior__c</fullName>
    <label>Amount (Prior)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>