source/objects/Opportunity_Snapshot__c/fields/Close_Date_Prior__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Prior__c</fullName>
    <label>Close Date (Prior)</label>
    <type>Date</type>
</CustomField>