source/objects/Opportunity_Snapshot__c/fields/Delivery_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Installation_Status__c</fullName>
    <label>Delivery/Installation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>