source/objects/Opportunity_Snapshot__c/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <label>Department ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>