source/objects/Opportunity_Snapshot__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <label>Forecast</label>
    <length>255</length>
    <type>Text</type>
</CustomField>