source/objects/Opportunity_Snapshot__c/fields/Forecast_Prior__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Prior__c</fullName>
    <label>Forecast (Prior)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upside</fullName>
                <default>true</default>
                <label>Upside</label>
            </value>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Gut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>