source/objects/Opportunity_Snapshot__c/fields/Geographic_Type__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Type__c</fullName>
    <label>Geographic Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>