source/objects/Opportunity_Snapshot__c/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <label>Industry Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>