source/objects/Opportunity_Snapshot__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>