source/objects/Opportunity_Snapshot__c/fields/Lead_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Name__c</fullName>
    <label>Lead Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>