source/objects/Opportunity_Snapshot__c/fields/Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Location_ID__c</fullName>
    <label>Location ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>