source/objects/Opportunity_Snapshot__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason: Sponsorship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>