source/objects/Opportunity_Snapshot__c/fields/Lost_Reason_Budget__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Budget__c</fullName>
    <label>Lost Reason: Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>