source/objects/Opportunity_Snapshot__c/fields/Lost_Reason_Cloud_Security__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Cloud_Security__c</fullName>
    <label>Lost Reason: Cloud/Security</label>
    <length>255</length>
    <type>Text</type>
</CustomField>