source/objects/Opportunity_Snapshot__c/fields/Lost_Reason_Insufficient_Bus_Issue__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Insufficient_Bus_Issue__c</fullName>
    <label>Lost Reason: Insufficient Bus Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>