source/objects/Opportunity_Snapshot__c/fields/Lost_Reason_Insufficient_Performance__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Insufficient_Performance__c</fullName>
    <label>Lost Reason: Insufficient Performance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>