source/objects/Opportunity_Snapshot__c/fields/Lost_Reason_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Pricing__c</fullName>
    <label>Lost Reason: Pricing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>