source/objects/Opportunity_Snapshot__c/fields/Lost_Reason_Reorg_Canceled_Project__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Reorg_Canceled_Project__c</fullName>
    <label>Lost Reason: Reorg/Canceled Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>