source/objects/Opportunity_Snapshot__c/fields/Lost_Reason_Timing__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Timing__c</fullName>
    <label>Lost Reason: Timing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>