source/objects/Opportunity_Snapshot__c/fields/Onsite_Demo_Completed__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Demo_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Onsite Demo Completed</label>
    <type>Checkbox</type>
</CustomField>