source/objects/Opportunity_Snapshot__c/fields/Opportunity_Movement_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Movement_Date__c</fullName>
    <formula>IF( Close_Date_Prior__c &gt;  Closed_Date__c , &quot;Moved forward&quot;, &quot;Moved Backward&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Movement (Date)</label>
    <type>Text</type>
</CustomField>