source/objects/Opportunity_Snapshot__c/fields/Oppotunity_Movement_Description__c.field-meta.xml
<CustomField>
    <fullName>Oppotunity_Movement_Description__c</fullName>
    <formula>Stage_Prior__c &amp;&quot; -&gt; &quot;&amp; Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Movement (Stage)</label>
    <type>Text</type>
</CustomField>