source/objects/Opportunity_Snapshot__c/fields/Partner_Online_Demo_Complete__c.field-meta.xml
<CustomField>
    <fullName>Partner_Online_Demo_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Online Demo Complete</label>
    <type>Checkbox</type>
</CustomField>