source/objects/Opportunity_Snapshot__c/fields/Pricebook_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_ID__c</fullName>
    <label>Pricebook ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>