source/objects/Opportunity_Snapshot__c/fields/Probability_Prior__c.field-meta.xml
<CustomField>
    <fullName>Probability_Prior__c</fullName>
    <label>Probability (Prior)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>