source/objects/Opportunity_Snapshot__c/fields/Received_Marketing_Material__c.field-meta.xml
<CustomField>
    <fullName>Received_Marketing_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Marketing Material</label>
    <type>Checkbox</type>
</CustomField>