source/objects/Opportunity_Snapshot__c/fields/Stage_Prior__c.field-meta.xml
<CustomField>
    <fullName>Stage_Prior__c</fullName>
    <label>Stage (Prior)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>