source/objects/Opportunity_Snapshot__c/fields/Strategic_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strategic Opportunity</label>
    <type>Checkbox</type>
</CustomField>