source/objects/Opportunity_Snapshot__c/fields/Total_Number_of_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Licenses__c</fullName>
    <label>Total Number of Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>