source/objects/Opportunity_Snapshot__c/fields/Won__c.field-meta.xml
<CustomField>
    <fullName>Won__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is Won?</inlineHelpText>
    <label>Won</label>
    <type>Checkbox</type>
</CustomField>